# misis2024s-23-03-serdeshnov-v-s

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  Trobocalc.cpp  robocalc.cpp
prj.app/timing_q/: CMakeLists.txt
prj.codeforces/: 0043a.cpp  0050a.cpp  0061a.cpp  0069a.cpp  0096a.cpp  0110a.cpp  0131a.cpp  0136a.cpp  0151a.cpp  0228a.cpp  0230a.cpp  0266a.cpp  0266b.cpp  0276a.cpp  0281a.cpp  0282a.cpp  0318a.cpp  0339b.cpp  0344a.cpp  0467a.cpp  0469a.cpp  0479a.cpp  0486a.cpp  0546a.cpp  0581a.cpp  0723a.cpp  0791a.cpp  0977a.cpp  0977b.cpp  1030a.cpp  1742c.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.h  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.h
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.h  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.h  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.h  stacklst.hpp
prj.test/: CMakeLists.txt  doctest.hpp  test_dynarr.cpp  test_queue_arr.cpp  test_queue_lst.cpp  test_rational.cpp  test_stack.cpp  test_stack_list.cpp  test_stackarr.cpp  test_stackarrt.cpp
