add_executable(0723a 0723a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0043a 0043a.cpp)
add_executable(0230a 0230a.cpp)
add_executable(1742c 1742c.cpp)
add_executable(1742d 1742d.cpp)
add_executable(0069a 0069a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(0266a 0266a.cpp)
add_executable(0266b 0266b.cpp)
add_executable(0977a 0977a.cpp)
add_executable(0977b 0977b.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0110a 0110a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(0467a 0467a.cpp)
add_executable(0344a 0344a.cpp)
add_executable(0486a 0486a.cpp)
add_executable(0136a 0136a.cpp)